@@ -1,3 +1,8 @@
+2018-03-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/valdiag/tests/restrict.c:
+	  Test for bug #2714.
+
 2018-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/regression/collate-results.py,
